--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>EUIHUN | UI Design Programming 1</title>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" />kdjafldsk
 </head>
 
 <body>
