--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>EUIHUN | UI Design Programming 1</title>
-  <meta charset="utf-8" />kdjafldsk
+  <meta charset="utf-8" />
 </head>
 
 <body>
@@ -23,6 +23,11 @@
         <li>My favorite food is kimchi soup</li>
         <li>My favorite song is Cruel Summer</li>
         <li>My favorite website is <a href="https://esdevlin.com/">esdevlin</a></li>
+      </ul>
+      <h2>exercise</h2>
+      <ul>
+         <li><a href="ascii/exterior-Han Euihun.html">ascii town</a>
+         </li>
       </ul>
 
     </div>
